file(GLOB NICE_EXAMPLES_TO_INSTALL thermique1d transport1d transport2d_ns transport2d_s Poisson2DEF Poisson3DEF Poisson3DVF Poisson2DVF Poisson3DSphereEF Poisson3DTorusEF WaveSystem1DUpwind WaveSystem2DUpwind WaveSystemPStag)

install(DIRECTORY ${NICE_EXAMPLES_TO_INSTALL} DESTINATION share/examples)

IF (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC)
    ADD_SUBDIRECTORY(Poisson2DVF)
    ADD_SUBDIRECTORY(Poisson2DEF)
    ADD_SUBDIRECTORY(Poisson3DSphereEF)
    ADD_SUBDIRECTORY(Poisson3DTorusEF)
    ADD_SUBDIRECTORY(Poisson3DEF)
    ADD_SUBDIRECTORY(Poisson3DVF)
    ADD_SUBDIRECTORY(WaveSystem1DUpwind)
    ADD_SUBDIRECTORY(WaveSystem2DUpwind)
    ADD_SUBDIRECTORY(WaveSystemPStag)
ENDIF (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC)


