file(GLOB NICE_EXAMPLES_TO_INSTALL thermique1d transport1d transport2d_ns transport2d_s Poisson2DEF Poisson2DEF_disk Poisson2DVF Poisson2DVF_disk Poisson3DEF Poisson3DEF_BALL Poisson3DVF Poisson3DVF_BALL Poisson3DSphereEF Poisson3DTorusEF WaveSystem1DUpwind WaveSystemUpwind WaveSystemPStag)

install(DIRECTORY ${NICE_EXAMPLES_TO_INSTALL} DESTINATION share/examples)

IF (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC)
    ADD_SUBDIRECTORY(Poisson2DVF)
    ADD_SUBDIRECTORY(Poisson2DVF_DISK)
    ADD_SUBDIRECTORY(Poisson2DEF)
    ADD_SUBDIRECTORY(Poisson2DEF_DISK)
    ADD_SUBDIRECTORY(Poisson3DSphereEF)
    ADD_SUBDIRECTORY(Poisson3DTorusEF)
    ADD_SUBDIRECTORY(Poisson3DEF)
    ADD_SUBDIRECTORY(Poisson3DEF_BALL)
    ADD_SUBDIRECTORY(Poisson3DVF)
    ADD_SUBDIRECTORY(Poisson3DVF_BALL)
    ADD_SUBDIRECTORY(WaveSystem1DUpwind)
    ADD_SUBDIRECTORY(WaveSystemUpwind)
    ADD_SUBDIRECTORY(WaveSystemPStag)
ENDIF (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC)


