
SET(TestMesh_SOURCES
  mainTests.py
  linearSolverTests.py
  )

SET(MESH_MED
  mesh.med
  Sphere106Cells.med
  )

file(COPY ${MESH_MED} DESTINATION ${CMAKE_BINARY_DIR}/tests/swig)
ADD_TEST(TestsCDMATHSwig ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/mainTests.py)
INSTALL(FILES ${MESH_MED}  mainTests.py DESTINATION bin/tests)

# Some users have to set environment variables manually before launching tests.
# On Ubuntu:
# export LD_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/lib/:${PETSC_DIR}/${PETSC_ARCH}/lib
# export PYTHONPATH=${CMAKE_INSTALL_PREFIX}/lib/cdmath:${CMAKE_INSTALL_PREFIX}/bin/cdmath

if (CDMATH_WITH_PETSC)
    ADD_TEST(TestsLinearSolverSwig ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/linearSolverTests.py)
    SET_PROPERTY(TEST TestsCDMATHSwig PROPERTY ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/lib:${CMAKE_INSTALL_PREFIX}/lib/cdmath:${PETSC_DIR}/${PETSC_ARCH}/lib")
    SET_PROPERTY(TEST TestsCDMATHSwig APPEND PROPERTY ENVIRONMENT "PYTHONPATH=${CMAKE_INSTALL_PREFIX}/lib/cdmath:${CMAKE_INSTALL_PREFIX}/bin/cdmath")
    SET_PROPERTY(TEST TestsLinearSolverSwig PROPERTY ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/lib:${CMAKE_INSTALL_PREFIX}/lib/cdmath:${PETSC_DIR}/${PETSC_ARCH}/lib")
    SET_PROPERTY(TEST TestsLinearSolverSwig APPEND PROPERTY ENVIRONMENT "PYTHONPATH=${CMAKE_INSTALL_PREFIX}/lib/cdmath:${CMAKE_INSTALL_PREFIX}/bin/cdmath")
    INSTALL(FILES linearSolverTests.py DESTINATION bin/tests)
else (CDMATH_WITH_PETSC)
    SET_PROPERTY(TEST TestsCDMATHSwig PROPERTY ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/lib:${CMAKE_INSTALL_PREFIX}/lib/cdmath")
    SET_PROPERTY(TEST TestsCDMATHSwig APPEND PROPERTY ENVIRONMENT "PYTHONPATH=${CMAKE_INSTALL_PREFIX}/lib/cdmath:${CMAKE_INSTALL_PREFIX}/bin/cdmath")
endif (CDMATH_WITH_PETSC)


